--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 header,
 section {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 :root {
@@ -18,7 +18,7 @@ section {
   --Patua: "Patua One", cursive;
   --Lobster: "Lobster", cursive;
   --light-black: #2e2c2caf;
-  --bg-gradient: linear-gradient(to bottom, #dd2476, #ff512f);
+  --bggradient: linear-gradient(to bottom, #dd2476, #ff512f);
   --light-grey: rgba(255, 255, 255, 0);
 }
 
@@ -30,5 +30,80 @@ header a {
 
 header {
   background: #dd2476;
-  background: var(--bg-gradient);
+  background: var(--bggradient);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background: #fff;
+  min-width: 160px;
+  z-index: 1;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background: #fff;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+header .nav-item:last-child {
+  padding-right: 10.5em;
+}
+
+header .nav-item {
+  padding: 0.9em;
+}
+
+header .navbar-brand {
+  padding-left: 8rem;
+}
+
+header .nav-link:hover {
+  color: black;
+}
+
+header .row .col-md-5 {
+  padding: 4.2vmin 1vmin;
+}
+
+header .row .col-md-7 {
+  padding: 22vmin 1vmin;
+  padding-bottom: 35vmin;
+  font-family: var(--Rubik);
+  color: white;
+}
+
+header .row .col-md-5 img {
+  width: 90%;
+}
+
+header .container .col-md-7 h6 {
+  padding: 1vmin;
+  letter-spacing: 4px;
+}
+
+header .container .col-md-7 h1 {
+  font-size: 8vmin;
+  font-weight: bold;
+  padding: 0.1em 0em;
+}
+
+header .container .col-md-7 p {
+  padding: 1vmin 5vmin;
+}
+
+header .container .col-md-7 button {
+  font-weight: bold;
+  border-radius: 30px;
 }
