--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,97 @@ header .container .col-md-7 button {
   font-weight: bold;
   border-radius: 30px;
 }
+
+/* Section1*/
+.section1 {
+  padding: 20vmin 0;
+}
+
+.section1 .row .col-md-6 .pray img {
+  opacity: 0.8;
+  width: 80%;
+  border-radius: 0.2em;
+}
+
+.section1 .row .col-md-6:last-child {
+  position: relative;
+}
+
+.section1 .row .col-md-6 .panel {
+  position: absolute;
+  top: 7vmin;
+  left: -15vmin;
+  background: white;
+  text-align: left;
+  border-radius: 3px;
+  padding: 13vmin 5vmin 20vmin 10vmin;
+  box-shadow: 0px 25px 42px rgba(0, 0, 0, 0.2);
+  font-family: var(--Rubik);
+  z-index: 1;
+}
+
+.section1 .row .col-md-6 .panel h1 {
+  font-weight: bold;
+  font-size: 2em;
+  padding: 0.4em 0;
+}
+
+.section1 .row .col-md-6 .panel p {
+  font-size: 0.9em;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+/* Section2*/
+
+.cover {
+  width: 100%;
+  height: 55vmin;
+  background: url("../assets/cover-img.jpg");
+  background-position: -24rem -19rem;
+  background-size: 150%;
+  position: relative;
+}
+
+.cover .content {
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  padding-top: 19vmin;
+}
+
+.cover .content > h1 {
+  font-family: var(--Patua);
+  font-size: 6vmin;
+  color: whitesmoke;
+}
+
+.cover .content > p {
+  font-family: var(--Rubik);
+  font-size: 2.5vmin;
+  color: #e5e5e5;
+}
+
+.numbers .rect {
+  position: relative;
+  z-index: 1;
+  background: white;
+  width: 17rem;
+  height: 12rem;
+  padding-top: 3.5vmin;
+  margin: 1rem;
+  border-radius: 0.5em;
+  box-shadow: 1px 2px 50px 0px rgba(255, 0, 0, 0.349);
+}
+
+.numbers {
+  margin-top: -7rem;
+}
+
+.numbers .rect h1 {
+  font-size: 5rem;
+  color: tomato;
+}
+
+.numbers .rect p {
+  font-family: var(--Patua);
+}
